# newyear-tootgen

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
src/newyear_tootgen/: gen.py  main.py  post.py  test.py
src/ny-tootgen/: main.py
