[tool.poetry]
name = "ny-tootgen"
version = "1.0.0"
description = "Generator for new year toots"
authors = ["George Kaye <georgejkaye@gmail.com>"]
license = "GPL-v3.0-or-later"
readme = "README.md"
packages = [{include = "ny_tootgen", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
emoji-country-flag = "^1.3.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
